--- a/arch/arm/configs/zynq_xcomm_adv7511_defconfig
+++ b/arch/arm/configs/zynq_xcomm_adv7511_defconfig
@@ -46,7 +46,7 @@ CONFIG_VLAN_8021Q=m
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_EXTRA_FIRMWARE="ad9517.stp"
+CONFIG_EXTRA_FIRMWARE="ad9517.stp adau1761.bin"
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTES=40
 CONFIG_CONNECTOR=y
