--- a/arch/arm/boot/dts/zynq.dtsi
+++ b/arch/arm/boot/dts/zynq.dtsi
@@ -171,7 +171,7 @@
 		};
 
 		gpio: gpio@e000a000 {
-			compatible = "xlnx,ps7-gpio-1.00.a", "xlnx,zynq-gpio-1.00.a";
+			compatible = "xlnx,ps7-gpio-1.00.a", "xlnx,zynq-gpio-1.00.a", "xlnx,zynq-gpio-1.0";
 			reg = <0xe000a000 0x1000>;
 			interrupts = <0 20 4>;
 			interrupt-parent = <&gic>;
