--- a/arch/nios2/configs/adi_nios2_defconfig
+++ b/arch/nios2/configs/adi_nios2_defconfig
@@ -1,9 +1,9 @@
-CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="arch/nios2/boot/rootfs.cpio.gz"
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_LOG_BUF_SHIFT=14
+CONFIG_BLK_DEV_INITRD=y
+CONFIG_INITRAMFS_SOURCE="arch/nios2/boot/rootfs.cpio.gz"
 CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_ELF_CORE is not set
 # CONFIG_EPOLL is not set
@@ -16,7 +16,6 @@ CONFIG_EMBEDDED=y
 CONFIG_SLAB=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_NIOS2_MEM_BASE=0x00000000
 CONFIG_NIOS2_DTB_SOURCE_BOOL=y
 CONFIG_NIOS2_DTB_SOURCE="arch/nios2/boot/devicetree.dts"
 CONFIG_NIOS2_HW_MUL_SUPPORT=y
@@ -44,7 +43,6 @@ CONFIG_IP_PNP_RARP=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_FW_LOADER=y
 CONFIG_EXTRA_FIRMWARE="ad9517.stp"
 CONFIG_MTD=y
 CONFIG_MTD_CMDLINE_PARTS=y
@@ -65,12 +63,28 @@ CONFIG_SERIAL_ALTERA_JTAGUART=y
 CONFIG_SERIAL_ALTERA_JTAGUART_CONSOLE=y
 CONFIG_SERIAL_ALTERA_UART=y
 # CONFIG_HW_RANDOM is not set
+CONFIG_SPI=y
+CONFIG_SPI_ALTERA=y
+CONFIG_SPI_AD9250FMC=y
+CONFIG_GPIOLIB=y
+CONFIG_GPIO_ALTERA=y
 # CONFIG_HWMON is not set
 # CONFIG_USB_SUPPORT is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+CONFIG_DMADEVICES=y
+CONFIG_DMA_AXI_DMAC=y
+CONFIG_IIO=y
+CONFIG_IIO_TRIGGER=y
+CONFIG_AD9467=y
+CONFIG_JESD204B_ALTERA=y
+CONFIG_ALTERA_XCVR=y
+CONFIG_AD9523=y
+CONFIG_AD9517=y
+CONFIG_CF_AXI_DDS=y
+CONFIG_CF_AXI_DDS_AD9144=y
 # CONFIG_DNOTIFY is not set
 # CONFIG_INOTIFY_USER is not set
 CONFIG_JFFS2_FS=y
@@ -80,16 +94,3 @@ CONFIG_ROOT_NFS=y
 CONFIG_SUNRPC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
-CONFIG_SPI=y
-CONFIG_SPI_ALTERA=y
-CONFIG_SPI_AD9250FMC=y
-CONFIG_GPIOLIB=y
-CONFIG_GPIO_ALTERA=y
-CONFIG_DMADEVICES=y
-CONFIG_DMA_AXI_DMAC=y
-CONFIG_IIO=y
-CONFIG_IIO_TRIGGER=y
-CONFIG_CF_AXI_ADC=y
-CONFIG_AD9467=y
-CONFIG_JESD204B_ALTERA=y
-CONFIG_AD9517=y
