--- a/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
@@ -34,7 +34,7 @@
 
 	rtc@68 {
 		compatible = "dallas,ds3232";
-		reg = <0x68>;
+		reg = <0x69>;
 	};
 };
 
@@ -75,6 +75,55 @@
 			linux,code = <KEY_POWER>;
 			gpio-key,wakeup;
 		};
+	};
+
+	gpio_keys {
+		compatible = "gpio-keys";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		interrupt-parent = <&gpio0>;
+		autorepeat;
+
+		s5 {
+			label = "Left";
+			linux,code = <KEY_LEFT>;
+			interrupts = <101 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+		s3 {
+			label = "Right";
+			linux,code = <KEY_RIGHT>;
+			interrupts = <103 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+		s4 {
+			label = "Up";
+			linux,code = <KEY_UP>;
+			interrupts = <102 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+		s2 {
+			label = "Down";
+			linux,code = <KEY_DOWN>;
+			interrupts = <104 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+		s1 {
+			label = "Enter";
+			linux,code = <KEY_ENTER>;
+			interrupts = <111 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+	};
+
+	rotary {
+			compatible = "rotary-encoder";
+			gpios = <&gpio0 112 1>, <&gpio0 113 1>;
+			linux,axis = <REL_WHEEL>;
+			rotary-encoder,steps = <24>;
+			rotary-encoder,steps-per-period = <2>;
+			rotary-encoder,rollover;
+			rotary-encoder,relative-axis;
 	};
 
 	poweroff {
