dts: zynq-adrv936x-z70xx-box: Add ts3a227e interrupt

--- a/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
@@ -33,7 +33,7 @@
 		compatible = "ti,ts3a227e";
 		reg = <0x3b>;
 		interrupt-parent = <&gpio0>;
-		//interrupts = <75 IRQ_TYPE_LEVEL_LOW>;
+		interrupts = <75 IRQ_TYPE_LEVEL_LOW>;
 	};
 
 	rtc@69 {
