zynq-adrv936[1|4]-z70[35|20]-box: Add support for the ADIS16460 IMU

--- a/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
@@ -195,13 +195,13 @@
 	is-decoded-cs = <0>;
 
 	adis16460@0{
-		compatible = "adi,adis16445";
+		compatible = "adi,adis16460";
 		reg = <0>;
-		status = "ok";
-
-		spi-max-frequency = <2000000>;
+		spi-max-frequency = <1000000>;
 		spi-cpol;
 		spi-cpha;
+		interrupt-parent = <&gpio0>;
+		interrupts = <82 IRQ_TYPE_EDGE_RISING>;
 	};
 };
 
@@ -263,7 +263,7 @@
 };
 /*
 
-input	imu_ready	PS_INTR_0
+input	imu_ready	28	82
 output	imu_rstn	9	63
 inout	imu_sync	8	62
 
