--- a/sound/soc/adi/Makefile
+++ b/sound/soc/adi/Makefile
@@ -2,9 +2,10 @@ snd-soc-adi-axi-i2s-objs := axi-i2s.o
 snd-soc-adi-axi-spdif-objs := axi-spdif.o
 snd-soc-adv7511-hdmi-objs := adv7511_hdmi.o
 snd-soc-zed-adau1761-objs := zed_adau1761.o
-  
+snd-soc-adrv936x-box-objs := adrv936x_box.o
+
 obj-$(CONFIG_SND_SOC_ADI_AXI_I2S) += snd-soc-adi-axi-i2s.o
 obj-$(CONFIG_SND_SOC_ADI_AXI_SPDIF) += snd-soc-adi-axi-spdif.o
 
 obj-$(CONFIG_SND_SOC_ADV7511_HDMI) += snd-soc-adv7511-hdmi.o
-obj-$(CONFIG_SND_SOC_ZED_ADAU1761) += snd-soc-zed-adau1761.o
+obj-$(CONFIG_SND_SOC_ZED_ADAU1761) += snd-soc-zed-adau1761.o snd-soc-adrv936x-box.o
