zynq-adrv936[1|4]-z70[35|20]-box: Use simple-audio-card-adrv936x-box

--- a/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
@@ -241,7 +241,7 @@
 		};
 
 		pzsdr_sound {
-			compatible = "simple-audio-card";
+			compatible = "simple-audio-card-adrv936x-box";
 			simple-audio-card,name = "ADRV9361-Z7035 ADAU1761";
 			simple-audio-card,widgets =
 				"Microphone", "Mic In",
