--- a/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
@@ -237,7 +237,7 @@
 		};
 
 		pzsdr_sound {
-			compatible = "simple-audio-card";
+			compatible = "simple-audio-card-adrv936x-box";
 			simple-audio-card,name = "ADRV9364-Z7020 ADAU1761";
 			simple-audio-card,widgets =
 				"Microphone", "Mic In",
