dts: zynq-adrv936[1|4]-z70[35|20]-box.dts: rename gpio-keys
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9364-z7020-box.dts
@@ -62,7 +62,7 @@
 		};
 	};
 
-	gpio-keys {
+	gpio-keys-power {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "gpio-keys";
@@ -79,7 +79,7 @@
 		};
 	};
 
-	gpio_keys {
+	gpio-keys-nav-switch {
 		compatible = "gpio-keys";
 		#address-cells = <1>;
 		#size-cells = <0>;
