--- a/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
@@ -66,7 +66,7 @@
 		};
 	};
 
-	gpio-keys {
+	gpio-keys-power {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "gpio-keys";
@@ -83,7 +83,7 @@
 		};
 	};
 
-	gpio_keys {
+	gpio-keys-nav-switch {
 		compatible = "gpio-keys";
 		#address-cells = <1>;
 		#size-cells = <0>;
