arch/arm/configs/zynq_xcomm_adv7511_defconfig: Add ADIS16460 IMU
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/arch/arm/configs/zynq_xcomm_adv7511_defconfig
+++ b/arch/arm/configs/zynq_xcomm_adv7511_defconfig
@@ -348,6 +348,7 @@ CONFIG_ADIS16136=y
 CONFIG_ADIS16260=y
 CONFIG_ADXRS450=y
 CONFIG_ADIS16400=y
+CONFIG_ADIS16460=y
 CONFIG_ADIS16480=y
 # CONFIG_RESET_CONTROLLER is not set
 CONFIG_EXT4_FS=y
