dts: zynq-adrv936[1|4]-z70[35|20]-box.dts: set ts3a227e insertion-debounce-time
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
+++ b/arch/arm/boot/dts/zynq-adrv9361-z7035-box.dts
@@ -34,6 +34,8 @@
 		reg = <0x3b>;
 		interrupt-parent = <&gpio0>;
 		interrupts = <75 IRQ_TYPE_LEVEL_LOW>;
+		ti,micbias = <1>; /* 2.2 Volt */
+		ti,insertion-debounce-time = <6>; /* 1 sec */
 	};
 
 	rtc@68 {
