--- a/arch/arm/boot/dts/zynq-zc706-adv7511-fmclidar1.dts
+++ b/arch/arm/boot/dts/zynq-zc706-adv7511-fmclidar1.dts
@@ -104,12 +104,17 @@
 	};
 };
 
-&spi0 {
-	status = "okay";
-};
-
 &spi1 {
 	status = "okay";
 };
 
+&spi0 {
+	status = "okay";
+};
+
+#define spi_vco		axi_spi_vco
+#define spi_clkgen	spi1
+#define spi_adc		spi0
+
 #include "adi-fmclidar1.dtsi"
+
