--- a/arch/arm/boot/dts/zynq-zc706-adv7511-fmclidar1.dts
+++ b/arch/arm/boot/dts/zynq-zc706-adv7511-fmclidar1.dts
@@ -39,6 +39,23 @@
 		#size-cells = <0>;
 	};
 
+	axi_spi_afe_adc: axi_quad_spi@7c600000 {
+		reg = <0x7c600000 0x10000>;
+		compatible = "xlnx,xps-spi-2.00.a";
+		bits-per-word = <8>;
+		clock-names = "ext_spi_clk", "s_axi_aclk";
+		clocks = <&clkc 15>, <&clkc 15>;
+		fifo-size = <16>;
+		interrupt-names = "ip2intc_irpt";
+		interrupt-parent = <&intc>;
+		interrupts = <0 53 1>;
+		num-cs = <0x1>;
+		xlnx,num-ss-bits = <0x1>;
+		xlnx,spi-mode = <0>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
 	axi_pulse_capture: axi-pulse-capture@7c700000 {
 		compatible = "adi,axi-pulse-capture-1.00.a";
 		reg = <0x7c700000 0x10000>;
@@ -120,6 +137,7 @@
 #define spi_vco		axi_spi_vco
 #define spi_clkgen	spi1
 #define spi_adc		spi0
+#define spi_afe_adc	axi_spi_afe_adc
 #define i2c_afe_dac	i2c1
 
 #include "adi-fmclidar1.dtsi"
