arm: configs: zynq_xcomm_adv7511_defconfig: Enable ADF4360 and LTC2471
Signed-off-by: Dragos Bogdan <dragos.bogdan@analog.com>

--- a/arch/arm/configs/zynq_xcomm_adv7511_defconfig
+++ b/arch/arm/configs/zynq_xcomm_adv7511_defconfig
@@ -291,6 +291,7 @@ CONFIG_AD2S1210=y
 CONFIG_FB_TFT=y
 CONFIG_FB_TFT_SEPS525=y
 CONFIG_FB_FLEX=y
+CONFIG_COMMON_CLK_ADF4360=y
 CONFIG_COMMON_CLK_SI570=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=y
 # CONFIG_IOMMU_SUPPORT is not set
@@ -331,6 +332,7 @@ CONFIG_AD9680=y
 CONFIG_ADMC=y
 CONFIG_CF_AXI_TDD=y
 CONFIG_AXI_PULSE_CAPTURE=y
+CONFIG_LTC2471=y
 CONFIG_XILINX_XADC=y
 CONFIG_AD8366=y
 CONFIG_AD5064=y
