--- a/arch/arm/boot/dts/adi-ad9172-fmc-ebz.dtsi
+++ b/arch/arm/boot/dts/adi-ad9172-fmc-ebz.dtsi
@@ -81,6 +81,7 @@
 		adi,channel-interpolation = <4>;
 		adi,clock-output-divider = <4>;
 		adi,syncoutb-signal-type-lvds-enable;
+		adi,logic-lanes-mapping = [07 06 05 04 00 00 00 00];
 	};
 };
 
