--- a/arch/arm/boot/dts/adi-fmclidar1.dtsi
+++ b/arch/arm/boot/dts/adi-fmclidar1.dtsi
@@ -137,11 +137,10 @@
 };
 
 &spi_afe_adc {
-	ad7091r@0 {
-		compatible = "adi,ad7091r";
+	ad7091@0 {
+		compatible = "adi,ad7091";
 		reg = <0>;
 		spi-max-frequency = <1000000>;
-		spi-cpha;
 		spi-cpol;
 		vcc-supply = <&vref_adc>;
 	};
