--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,28 @@ notifications:
     on_success: change
     on_failure: always
 
-env:
-  matrix:
-  - BUILD_TYPE=sync_branches_with_master_travis
-  - BUILD_TYPE=checkpatch
-  - BUILD_TYPE=dtb_build_test ARCH=arm DTS_FILES=arch/arm/boot/dts/zynq-*.dts CROSS_COMPILE=arm-linux-gnueabihf-
-  - BUILD_TYPE=dtb_build_test ARCH=arm64 DTS_FILES=arch/arm64/boot/dts/xilinx/zynqmp-*.dts CROSS_COMPILE=aarch64-linux-gnu-
-  - DEFCONFIG=zynq_xcomm_adv7511_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
-  - DEFCONFIG=zynq_pluto_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
-  - DEFCONFIG=zynq_sidekiqz2_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
-  - DEFCONFIG=adi_zynqmp_defconfig ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- IMAGE=Image
-  - DEFCONFIG=zynq_m2k_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
-  - BUILD_TYPE=compile_test DEFCONFIG=zynq_xcomm_adv7511_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf-
-  - BUILD_TYPE=compile_test DEFCONFIG=adi_zynqmp_defconfig ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu-
-
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y build-essential bc u-boot-tools gcc-arm-linux-gnueabihf gcc-aarch64-linux-gnu
+
+matrix:
+  include:
+    - sync_branches: 1
+      env: BUILD_TYPE=sync_branches_with_master_travis
+    - checkpatch: 1
+      env: BUILD_TYPE=checkpatch
+    - env: BUILD_TYPE=dtb_build_test ARCH=arm DTS_FILES=arch/arm/boot/dts/zynq-*.dts CROSS_COMPILE=arm-linux-gnueabihf-
+    - env: BUILD_TYPE=dtb_build_test ARCH=arm64 DTS_FILES=arch/arm64/boot/dts/xilinx/zynqmp-*.dts CROSS_COMPILE=aarch64-linux-gnu-
+    - env: DEFCONFIG=zynq_xcomm_adv7511_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
+    - env: DEFCONFIG=zynq_pluto_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
+    - env: DEFCONFIG=zynq_sidekiqz2_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
+    - env: DEFCONFIG=adi_zynqmp_defconfig ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- IMAGE=Image
+    - env: DEFCONFIG=zynq_m2k_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- IMAGE=uImage
+    - env: BUILD_TYPE=compile_test DEFCONFIG=zynq_xcomm_adv7511_defconfig ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf-
+    - env: BUILD_TYPE=compile_test DEFCONFIG=adi_zynqmp_defconfig ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu-
+  allow_failures:
+    - sync_branches: 1
+    - checkpatch: 1
 
 script:
   - ./ci/travis/run-build.sh
