ci,travis: allow failures for checkpatch & sync-branches
We want to move to philosophy where we have a
build-MUST-be-green-to-merge-code.

Github is great that it can actually implement this check. But in Travis-CI
the sync-branches & checkpatch builds frequently fail, and they are
sometimes nearly impossible to get green.

Travis-CI allows the specification of builds that are **allowed_failures**.
This is great, as Github can be notified that the build passed, even if
these 2 may have failed.

The sync-branches actually fails only on the master branch [since it
actually runs only for the master branch]. We would get less spam now with
this change.

Signed-off-by: Alexandru Ardelean <alexandru.ardelean@analog.com>
(cherry picked from commit cc28af1e4e1d9a2deccbad98c6da51f83e52bef5)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,14 @@ notifications:
     on_success: change
     on_failure: always
 
-env:
-  matrix:
-  - BUILD_TYPE=checkpatch DO_NOT_DOCKERIZE=1
-  - BUILD_TYPE=dtb_build_test ARCH=arm DTS_FILES=arch/arm/boot/dts/socfpga_*.dts DO_NOT_DOCKERIZE=1
-  - DEFCONFIG=socfpga_adi_defconfig ARCH=arm IMAGE=zImage
-  - BUILD_TYPE=compile_test DEFCONFIG=socfpga_adi_defconfig ARCH=arm IMAGE=zImage
+matrix:
+  include:
+    - checkpatch: 1
+      env: BUILD_TYPE=checkpatch DO_NOT_DOCKERIZE=1
+    - env: BUILD_TYPE=dtb_build_test ARCH=arm DTS_FILES=arch/arm/boot/dts/socfpga_*.dts DO_NOT_DOCKERIZE=1
+    - env: DEFCONFIG=socfpga_adi_defconfig ARCH=arm IMAGE=zImage
+  allow_failures:
+    - checkpatch: 1
 
 script:
   - ./ci/travis/run-build-docker.sh
