--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
       env: BUILD_TYPE=checkpatch DO_NOT_DOCKERIZE=1
     - env: BUILD_TYPE=dtb_build_test ARCH=arm DO_NOT_DOCKERIZE=1
            DTS_FILES="arch/arm/boot/dts/zynq-*.dts arch/arm/boot/dts/socfpga_*.dts"
+    - env: BUILD_TYPE=dtb_build_test ARCH=microblaze DO_NOT_DOCKERIZE=1
+           DTS_FILES=arch/microblaze/boot/dts/*.dts
     - env: BUILD_TYPE=dtb_build_test ARCH=arm64 DTS_FILES=arch/arm64/boot/dts/xilinx/zynqmp-*.dts DO_NOT_DOCKERIZE=1
     - env: DEFCONFIG=zynq_xcomm_adv7511_defconfig ARCH=arm IMAGE=uImage
            CHECK_ALL_ADI_DRIVERS_HAVE_BEEN_BUILT=1
