iio: adrv9002: Adapt driver to the new API version
- Adapt 'adi_adrv9001_gpio_GpIntMask_Set' to the new API;
- Define 'ADI_ADRV9001_SI_REV_C0' or 'ADI_ADRV9001_SI_REV_B0'is depending
on the board we are building to...

Signed-off-by: Nuno Sá <nuno.sa@analog.com>

--- a/drivers/iio/adc/navassa/Makefile
+++ b/drivers/iio/adc/navassa/Makefile
@@ -41,9 +41,11 @@ adrv9002_drv-y += devices/adrv9001/public/src/adi_adrv9001_profileutil.o
 obj-$(CONFIG_ADRV9001) += adrv9002_drv.o
 
 ifeq ($(CONFIG_ADRV9001_B0_HW_REV),y)
-ccflags-y += -I$(src)/devices/adrv9001/private/include/bitfields/b0
+ccflags-y += -I$(src)/devices/adrv9001/private/include/bitfields/b0 \
+	-DADI_ADRV9001_SI_REV_B0
 else
-ccflags-y += -I$(src)/devices/adrv9001/private/include/bitfields/c0
+ccflags-y += -I$(src)/devices/adrv9001/private/include/bitfields/c0 \
+	-DADI_ADRV9001_SI_REV_C0
 endif
 
 ccflags-y += -I$(src)/devices/adrv9001/private/include \
