--- a/arch/arm64/configs/adi_versal_defconfig
+++ b/arch/arm64/configs/adi_versal_defconfig
@@ -24,6 +24,10 @@ CONFIG_NR_CPUS=4
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_COMPAT=y
+CONFIG_ARMV8_DEPRECATED=y
+CONFIG_SWP_EMULATION=y
+CONFIG_CP15_BARRIER_EMULATION=y
+CONFIG_SETEND_EMULATION=y
 CONFIG_CPU_IDLE=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
@@ -94,7 +98,6 @@ CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_T_FILTER=y
 CONFIG_BRIDGE_EBT_T_NAT=y
 CONFIG_BRIDGE_EBT_MARK_T=y
-CONFIG_BRIDGE=y
 CONFIG_NET_PKTGEN=y
 CONFIG_CAN=y
 CONFIG_CAN_XILINXCAN=y
@@ -206,13 +209,11 @@ CONFIG_STE10XP=y
 CONFIG_VITESSE_PHY=y
 CONFIG_XILINX_PHY=y
 CONFIG_XILINX_GMII2RGMII=y
-CONFIG_USB_USBNET=y
 CONFIG_WL18XX=y
 CONFIG_WLCORE_SPI=y
 CONFIG_WLCORE_SDIO=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_MOUSE is not set
-# CONFIG_SERIO is not set
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_OF_PLATFORM=y
@@ -228,24 +229,19 @@ CONFIG_SERIAL_XILINX_PS_UART_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_I2C_CHARDEV=y
-CONFIG_I2C_MUX=y
 CONFIG_I2C_MUX_PCA9541=y
 CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_CADENCE=y
 CONFIG_I2C_XILINX=y
-CONFIG_SPI=y
 CONFIG_SPI_CADENCE=y
 CONFIG_SPI_XILINX=y
 CONFIG_SPI_ZYNQMP_GQSPI=y
-CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_XILINX=y
 CONFIG_GPIO_ZYNQ=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_TPS65086=y
-CONFIG_POWER_RESET_LTC2952=y
 CONFIG_SENSORS_IIO_HWMON=y
-CONFIG_PMBUS=y
 CONFIG_WATCHDOG=y
 CONFIG_XILINX_WATCHDOG=y
 CONFIG_CADENCE_WATCHDOG=y
@@ -254,13 +250,6 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_TPS65086=y
-CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_MEDIA_USB_SUPPORT=y
-CONFIG_USB_VIDEO_CLASS=y
-CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_XILINX=y
 CONFIG_VIDEO_XILINX_AXI4S_SWITCH=y
 CONFIG_VIDEO_XILINX_CFA=y
@@ -282,7 +271,6 @@ CONFIG_VIDEO_XILINX_DPRXSS=y
 CONFIG_VIDEO_XILINX_SCD=y
 CONFIG_VIDEO_XILINX_M2M=y
 # CONFIG_VGA_ARB is not set
-CONFIG_DRM=y
 CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM=y
 CONFIG_DRM_XLNX=y
 CONFIG_DRM_XLNX_BRIDGE=y
@@ -297,32 +285,15 @@ CONFIG_DRM_XLNX_BRIDGE_CSC=y
 CONFIG_DRM_XLNX_BRIDGE_SCALER=y
 CONFIG_FB_XILINX=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_SOUND=y
-CONFIG_SND=y
 # CONFIG_SND_DRIVERS is not set
 # CONFIG_SND_PCI is not set
-CONFIG_SND_USB_AUDIO=y
-CONFIG_SND_SOC=y
 CONFIG_SND_SOC_XILINX_DP=y
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=y
 CONFIG_SND_SOC_XILINX_SDI=y
 CONFIG_SND_SOC_XILINX_I2S=y
 CONFIG_SND_SOC_XILINX_SPDIF=y
 CONFIG_SND_SOC_XILINX_PL_SND_CARD=y
-CONFIG_USB=y
-CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
-# CONFIG_USB_DEFAULT_PERSIST is not set
-CONFIG_USB_OTG=y
 CONFIG_USB_OTG_FSM=y
-CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_STORAGE=y
-CONFIG_USB_UAS=y
-CONFIG_USB_DWC3=y
-CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_XILINX=y
-CONFIG_USB_CONFIGFS=y
-CONFIG_USB_CONFIGFS_EEM=y
-CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_ETH=m
 CONFIG_USB_ETH_EEM=y
 CONFIG_USB_MASS_STORAGE=m
@@ -330,8 +301,6 @@ CONFIG_MMC=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_ARASAN=y
-CONFIG_NEW_LEDS=y
-CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
@@ -354,7 +323,6 @@ CONFIG_XILINX_PS_PCIE_DMA=y
 CONFIG_DMATEST=y
 CONFIG_UIO_XILINX_APM=y
 CONFIG_UIO_XILINX_AI_ENGINE=y
-CONFIG_STAGING=y
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_CMA_HEAP=y
@@ -370,13 +338,10 @@ CONFIG_COMMON_CLK_ZYNQMP=y
 CONFIG_REMOTEPROC=y
 CONFIG_ZYNQMP_R5_REMOTEPROC=m
 CONFIG_XILINX_VCU=m
-CONFIG_IIO=y
 CONFIG_INA2XX_ADC=y
-CONFIG_XILINX_XADC=y
 CONFIG_XILINX_AMS=y
 CONFIG_VERSAL_SYSMON=y
 CONFIG_XILINX_INTC=y
-CONFIG_RESET_CONTROLLER=y
 CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_PMU is not set
 CONFIG_RAS=y
