arch: arm64: adi_versal_defconfig: Enable CONFIG_AXI_DMAC
Signed-off-by: Dragos Bogdan <dragos.bogdan@analog.com>

--- a/arch/arm64/configs/adi_versal_defconfig
+++ b/arch/arm64/configs/adi_versal_defconfig
@@ -317,6 +317,7 @@ CONFIG_EDAC_ZYNQMP_OCM=y
 CONFIG_EDAC_XILINX_DDR=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_ZYNQMP=y
+CONFIG_AXI_DMAC=y
 CONFIG_XILINX_DMA=y
 CONFIG_XILINX_ZYNQMP_DMA=y
 CONFIG_XILINX_PS_PCIE_DMA=y
