--- a/arch/arm64/boot/dts/xilinx/versal-vck190-reva.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-vck190-reva.dts
@@ -17,7 +17,7 @@
 	model = "Xilinx Versal vck190 Eval board revA";
 
 	chosen {
-		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8 clk_ignore_unused";
+		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8 clk_ignore_unused root=/dev/mmcblk0p2 rw rootfstype=ext4 rootwait";
 		stdout-path = "serial0:115200";
 	};
 
