--- a/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9081.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9081.dts
@@ -341,7 +341,7 @@
 	hmc7044_c12: channel@12 {
 		reg = <12>;
 		adi,extended-name = "FPGA_REFCLK";
-		adi,divider = <15>;	// 200 - will be 375 (8)
+		adi,divider = <8>;	// 375
 		adi,driver-mode = <HMC7044_DRIVER_MODE_LVDS>;	// LVDS
 	};
 
