arch: arm64: vck190-ad9081: Set a temporary local-mac-address
Signed-off-by: Dragos Bogdan <dragos.bogdan@analog.com>

--- a/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9081.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-vck190-reva-ad9081.dts
@@ -121,6 +121,10 @@
 	clock-frequency = <33333333>;
 };
 
+&gem0 {
+	local-mac-address = [00 0a 35 ad 90 81];
+};
+
 / {
 	fpga_axi: fpga-axi@0 {
 		interrupt-parent = <&gic>;
